# routes/user.go
@@ -8,7 +8,7 @@ import (
 func GetUserApiRoutes(e *echo.Echo, userController *api.UserController){
 	v1 := e.Group("/api/v1")
 	{
-		v1.GET("/login",userController.GetLoginUser)
+		v1.POST("/login",userController.PostLoginUser)
 		v1.POST("/join",userController.PostUser)
 	}
 }
